ecmascript/parser/tests/test262-error-references/fail/8f7c7b7f4d70f975.js.stderr
error: Unexpected token `]`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/8f7c7b7f4d70f975.js:2:1
  |
2 | ]
  | ^

